# Iris

./: .gitignore  DEV_PLAN.md  Design.md  README.md  docker-compose.yml
db/: init.sql
services/embedder/: Dockerfile  embedder.py  pyproject.toml
services/frame-extractor/: Dockerfile  extractor.py  pyproject.toml
services/pipeline-example/: Dockerfile  pipeline_example.py  pyproject.toml
services/visualizer/: Dockerfile  pyproject.toml  visualizer.py
services/watcher/: Dockerfile  pyproject.toml  watcher.py
