[project]
name = "frame-extractor"
version = "0.1.0"
description = "Project Iris - Frame Extractor: consumes video.new, extracts 1 fps, publishes frames.extracted"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=5.0.0.93",
    "pika>=1.4.1",
    "psycopg[binary]>=3.3.4",
]
