[project]
name = "iris-visualizer"
version = "0.1.0"
description = "Project Iris - Streamlit visualizer: embedding projection, frame viewer, similarity search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.37",
    "scikit-learn>=1.5",
    "plotly>=5.24",
    "opencv-python-headless>=4.9",
    "psycopg[binary]>=3.2",
]
